# muse_validation_pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.pytoml  pyproject.toml
museval/: __init__.py  _version.py  data_download_pipeline.py  io.py  iris_data_download_analysis.py  iris_qs_download_analysis.py  iris_synthesis.py  model_valid_pipeline.old.py  model_valid_pipeline.py  test.py  test.py~  utils.py
museval/eis_calibration/: eis_calib_2014.py  eis_calib_2023.py
museval/working_codes/: AIA_conv_test.ipynb  QS_new_analysis_ratio.ipynb  bigger_QS_FOV_cutouts.ipynb  hmi_cutouts_save.py  hmi_cutouts_test.ipynb  iris_eis_sdo_analysis.ipynb  modified_data_download_pipeline.py  modified_eis_sdo_anal_pipeline.py  modified_iris_data_analysis.py  refactored_data_analysis.py  test_QS_post_Jake.ipynb  test_new_eis_sdo_pipeline.ipynb  test_new_response.ipynb  test_new_response_saved_hmi.ipynb  valid_bigger_cuts.ipynb
